networkpolicy/networkpolicy__basic_kafka_setup__cert-manager__all__cert-manager__egress__ports__cert-manager__nr51__lines15.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cert-manager--all--cert-manager--egress--ports--cert-manager--nr51
  namespace: cert-manager
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          stacktic.io/namespace: cert-manager
